--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,8 +7,23 @@
 }
 
 /*shared style*/
+
+.secondary-bg{
+  background-color: #fff8f3;
+}
 .text-primary{
   color: #FD6E0A;
+}
+
+.section-title{
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+
+.section-description{
+  font-size: 18px;
+  color: #757575;
 }
 
 .btn-primary{
@@ -78,4 +93,27 @@ nav ul li a{
 
 .banner-profile-pic{
   width: 580px;
+}
+
+/* main styles */
+.main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* About styles */
+.about{
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+
+.about-items{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: auto;
+
+}
+.item-title{
+  font-weight: bold;
 }
