--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,7 +7,9 @@
 }
 
 /*shared style*/
-
+.text-center{
+  text-align: center;
+}
 .secondary-bg{
   background-color: #fff8f3;
 }
@@ -100,12 +102,17 @@ nav ul li a{
   max-width: 1140px;
   margin: 0 auto;
 }
+
+main section{
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
 /* About styles */
 .about{
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
+  
 }
 
 .about-items{
@@ -116,4 +123,22 @@ nav ul li a{
 }
 .item-title{
   font-weight: bold;
+}
+
+/* image-edit */
+.imagee{
+  width: 50px;
+}
+
+/* slills section styles */
+.skills{
+  background-color: #fff8f3;
+}
+.skills-container{
+  display: flex
+}
+.skill{
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 6px 50px 0px rgba(0red, 0green, 0blue, 6alpha)
 }
